<resources>
    <string name="app_name">QuickBite</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="error_loading">Loading Error</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="or">OR</string>
    <string name="coffee">COFFEE</string>
    <string name="lunch_dinner">LUNCH / DINNER</string>
    <string name="grab_a_beer">GRAB A BEER</string>
    <string name="my_favourites">MY FAVOURITES</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="log_out">LOG OUT</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="address">Brookfield</string>
    <string name="cuisine">Cafe Amarican,Continental</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="restaurant_featured_image">Restaurant Featured Image</string>
    <string name="restaurant_cover_transition">cover</string>
    <string name="content_authority">com.iambedant.nanodegree.quickbite</string>
    <string name="transition_background">background_transition</string>
    <string name="restaurant_details">DETAILS</string>
    <string name="c_d_get_direction_button">Get Direction Button</string>
    <string name="c_d_add_to_my_favourite_button">Add to my favourite Button</string>
    <string name="c_d_view_on_zomato_button">View on Zomato Button</string>
    <string name="cuisines">Cuisines :</string>
    <string name="cost">Cost</string>
    <string name="delivery">Delivery</string>
    <string name="location_dummy_text">Whitefield</string>
    <string name="favourite">FAVOURITE</string>
    <string name="bar">BAR</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="dinner">DINE OUT</string>
    <string name="lunch">TAKE AWAY</string>
    <string name="you_are_at">You are at</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="error_title">OOps !!</string>
    <string name="error_message_generic">Something Went wrong. May be your internet gone Down :(</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="title_activity_avourites">avourites</string>
    <string name="get_message">This is the message need to replace</string>
    <string name="address_tv">ADDRESS</string>
    <string name="reviews_tv">REVIEWS</string>
    <string name="all_riview_button">VIEW ALL REVIEWS</string>
    <string name="see_more">SEE MORE</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="foodie_level">Super Foodie</string>
    <string name="tools_rating">5.4</string>
    <string name="tools_name">Mr John Doe</string>
    <string name="delivery_available_text">Available</string>
    <string name="delivery_not_available">Not Available</string>
    <string name="map_api">AIzaSyBxYSJZzEXKNTJmWsrEScgyapoU1Z2l9xY</string>
    <string name="transition_name_layout">layout</string>
    <string name="title_activity_recycl">Recycl</string>
    <string name="title_activity_tail">TailActivity</string>
    <string name="title_activity_full_review">FullReview</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="reviewer_transition_name">reviewer_image</string>
    <string name="no_review">Sorry !!! No Review Found</string>
    <string name="direction">DIRECTION</string>
    <string name="favourite_btn">FAVOURITE</string>
    <string name="menu">MENU</string>
    <string name="no_network_available">No Network Available</string>
    <string name="no_restaurant_found">Sorry No Restaurant found for this category</string>
    <string name="retry_btn">RETRY</string>
    <string name="type_a_cuisine">Type a cuisine..</string>
    <string name="please_wait">Please Wait...</string>
    <string name="sign_in">SIGN IN</string>
    <string name="facebook_app_id">1359074350818976</string>
    <string name="my_favourite">My Favourites</string>
    <string name="welcome_dummy_text">Hi, Bedant</string>
    <string name="start_typing_your_location">Start typing your location...</string>
    <string name="sorry">Sorry !!!</string>
    <string name="location_error_message">Please Provide your location so that we can find the best results for you</string>
    <string name="location_positive">Enter Location</string>
    <string name="location_negative">Exit App</string>
    <string name="user_display_pic">User Display Pic</string>
    <string name="view_user_profile_button">View User Profile Button</string>
    <string name="user_name">User Name</string>
    <string name="user_foodie_level">User Foodie Level</string>
    <string name="user_review">User Review</string>
    <string name="background_image">Background Image</string>
    <string name="user_name_">User Name</string>
    <string name="user_current_location">User Current Location</string>
    <string name="search_cuisine_button">Search Cuisine Button</string>
    <string name="clear_cuisine_filter_button">Clear Cuisine Filter button</string>
    <string name="recycler_view">Recycler View</string>
    <string name="progress_indicator">Progress indicator</string>
    <string name="image_switcher">Image Switcher</string>
    <string name="tab_layout_for_displaying_login_and_signup_option">Tab Layout for displaying Login and Signup option</string>
    <string name="back_button">Back Button</string>
    <string name="type_cuisine_edittext">Type Cuisine Edittext</string>
    <string name="password_edit_text">Password edit text</string>
    <string name="email_edittext">Email edittext</string>
    <string name="sign_in_button">Sign In Button</string>
    <string name="facebook_sign_in_button">Facebook Sign In Button</string>
    <string name="google_sign_in_button">Google Sign In Button</string>
    <string name="sign_up_button">Sign Up Button</string>
    <string name="dine_out_button">Dine Out Button</string>
    <string name="take_away_button">Take Away Button</string>
    <string name="breakfast_button">Breakfast Button</string>
    <string name="bar_button">Bar Button</string>
    <string name="coffee_button">Coffee Button</string>
    <string name="fav_button">My Favourites button</string>
    <string name="cuisine_name">Cuisine Name</string>
    <string name="single_cuisine_layout">Single Cuisine Layout</string>
    <string name="restaurant_item">Restaurant Item</string>
    <string name="cuisine_item">Cuisine Item</string>
    <string name="restaurant_name_">Restaurant Name</string>
    <string name="restaurant_cuisines">Restaurant Cuisines</string>
    <string name="address_">Restaurant Address</string>
    <string name="restaurant_description">Restaurant Description</string>
    <string name="rating">Rating</string>
    <string name="see_more_button">See More Button</string>
    <string name="action_button">Action Button</string>
    <string name="network_not_available">Network Not Available</string>
    <string name="play_services_error">Google Play Services error</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="change_name">Change Name</string>
    <string name="name_updated">Name is updated</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="password_updated">Password Updated Successfully</string>
    <string name="settings">SETTINGS</string>
    <string name="name_">Name</string>
    <string name="update">UPDATE</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="restaurant_cover_image">Restaurant Cover Image</string>
    <string name="transition_name">image</string>
    <string name="profile">Profile</string>
    <string name="rupees">"Rs. "</string>
    <string name="two_people">" For two People (Approx)"</string>
    <string name="favo">FAVOURITES</string>
    <string name="map_uri">http://maps.google.com/maps?daddr=</string>
    <string name="google_play_error">"Google Play Services is not available: "</string>
    <string name="im">im</string>
    <string name="please_wait_">Please Wait ...</string>

</resources>
