<?xml version="1.0" encoding="utf-8"?>
<com.iambedant.nanodegree.quickbite.ui.views.MaxWidthFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:maxWidth="@dimen/max_width_detail_layout"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:padding="@dimen/padding_small"
                android:layout_width="match_parent"
                android:layout_height="@dimen/review_header_height"
                android:background="@color/light_grey"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_pic"
                    android:transitionName="@string/reviewer_transition_name"
                    android:layout_width="@dimen/reviewer_image_hight"
                    android:contentDescription="@string/user_display_pic"
                    android:layout_height="@dimen/reviewer_image_hight"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    android:src="@drawable/home_bg" />

                <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/user_name"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:font="SourceSansPro-Semibold" />

                <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
                    android:id="@+id/tv_foodie_level"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/user_foodie_level"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:font="SourceSansPro-Light"
                    tools:text="@string/foodie_level" />

                <Button
                    android:id="@+id/btn_view_profile"
                    android:text="@string/profile"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/view_user_profile_button"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/content"
                android:padding="@dimen/padding_small"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:font="SourceSansPro-Semibold"
                    android:contentDescription="@string/user_review"
                     tools:text="@string/lorem_ipsum"
                    android:id="@+id/tv_review"
                    style="@style/readable_text" />
            </LinearLayout>
        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>


</com.iambedant.nanodegree.quickbite.ui.views.MaxWidthFrameLayout>