<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <com.iambedant.nanodegree.quickbite.ui.views.FontEditText
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/email_edittext"
                    android:hint="@string/email"
                    app:font="SourceSansPro-Regular" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <com.iambedant.nanodegree.quickbite.ui.views.FontEditText
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/password_edit_text"
                    android:hint="@string/password"
                    app:font="SourceSansPro-Regular" />
            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/ButtonBlack"
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/sign_in_button"
                android:text="@string/sign_in" />

            <include layout="@layout/view_or" />
        </LinearLayout>


    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>