<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:background="@drawable/home_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/home_image_height"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_dinner"
            android:contentDescription="@string/dine_out_button"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/home_page_button_height"
            android:layout_weight="@integer/one"
            android:background="@color/color_dinner"
            android:clickable="true"
            android:foreground="@drawable/mid_grey_ripple">

            <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/dinner"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_home_button_size"
                app:font="SourceSansPro-Light" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_lunch"
            android:contentDescription="@string/take_away_button"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/home_page_button_height"
            android:layout_weight="@integer/one"
            android:background="@color/color_lunch"
            android:clickable="true"
            android:foreground="@drawable/mid_grey_ripple">

            <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/lunch"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_home_button_size"
                app:font="SourceSansPro-Light" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:contentDescription="@string/breakfast_button"
        android:id="@+id/rl_breakfast"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_page_button_height"
        android:background="@color/color_breakfast"
        android:clickable="true"
        android:foreground="@drawable/mid_grey_ripple">

        <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/breakfast"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_home_button_size"
            app:font="SourceSansPro-Light" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_bar"
            android:contentDescription="@string/bar_button"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/home_page_button_height"
            android:layout_weight="@integer/one"
            android:background="@color/color_bar"
            android:clickable="true"
            android:foreground="@drawable/mid_grey_ripple">

            <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/bar"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_home_button_size"
                app:font="SourceSansPro-Light" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_coffee"
            android:contentDescription="@string/coffee_button"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/home_page_button_height"
            android:layout_weight="@integer/two"
            android:background="@color/color_coffee"
            android:clickable="true"
            android:foreground="@drawable/mid_grey_ripple">

            <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/coffee"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_home_button_size"
                app:font="SourceSansPro-Light" />
        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_favourite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_page_button_height"
        android:contentDescription="@string/fav_button"
        android:background="@color/color_favourite"
        android:clickable="true"
        android:foreground="@drawable/mid_grey_ripple">

        <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/favourite"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_home_button_size"
            app:font="SourceSansPro-Light" />
    </RelativeLayout>
</LinearLayout>