<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:padding="@dimen/padding_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_pic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:src="@drawable/home_bg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_toRightOf="@id/iv_profile_pic"
            android:layout_toEndOf="@id/iv_profile_pic"
            android:orientation="vertical">

            <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:font="SourceSansPro-Semibold"
                tools:text="@string/tools_name" />

            <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
                android:id="@+id/tv_foodie_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:font="SourceSansPro-Light"
                tools:text="@string/foodie_level" />


        </LinearLayout>

        <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:font="SourceSansPro-Semibold"
            tools:text="@string/tools_rating" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
            android:id="@+id/tv_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            style="@style/readable_text"
            android:maxLines="@integer/five"
            app:font="SourceSansPro-Regular"
            tools:text="@string/lorem_ipsum" />

        <Button
            android:id="@+id/btn_see_more"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tv_review"
            android:text="@string/see_more" />

    </RelativeLayout>
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/devider"/>-->
</LinearLayout>