<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/one_dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="@integer/two"
            android:background="@color/colorSeparator" />

        <com.iambedant.nanodegree.quickbite.ui.views.FontTextView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/one"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="@dimen/text_size_medium"
            app:font="SourceSansPro-Light" />

        <View
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/one_dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="@integer/two"
            android:background="@color/colorSeparator" />
    </LinearLayout>


    <Button
        android:layout_marginTop="@dimen/card_radius"
        android:id="@+id/btn_facebook"
        style="@style/ButtonFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/facebook_sign_in_button"
        android:text="facebook"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/google_sign_in_button" />


</LinearLayout>