<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#efefef"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/restaurant_image_height"
            android:scaleType="centerCrop" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/restaurant_image_height"
            android:background="@drawable/scrim_nav_header" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                tools:text="@string/restaurant_name" />

            <TextView
                android:id="@+id/cuisine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginTop="@dimen/margin_xxsmall"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_small"
                tools:text="@string/cuisine" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cuisine"
                android:layout_marginTop="@dimen/margin_xxsmall"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_small"
                tools:text="@string/address" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                tools:text="4.5" />
        </RelativeLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>